# metrosign

./: .gitignore  LICENSE  README.md  install.sh  install_complete.sh  pyproject.toml  requirements.txt
code/: __init__.py  config.example.json  displaytest.py  main.py  stationinfotest.py
code/metrosign/: __init__.py  app.py  config.py  display.py  format.py  wmata.py
code/tests/: __init__.py  test_config.py  test_format.py  test_wmata_grouping.py
