[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metrosign"
version = "0.1.0"
description = "Raspberry Pi LED matrix display for WMATA train arrival predictions"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  "requests>=2.0",
  "luma.led_matrix>=1.0"
]

[project.scripts]
metrosign = "code.main:main"
