[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metrosign"
version = "0.1.0"
description = "Raspberry Pi LED matrix display for WMATA train arrival predictions"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "ranechka", email = "22230129+ranechka@users.noreply.github.com" }
]
dependencies = [
  "requests>=2.0",
  "luma.led_matrix>=1.0",
  "Pillow>=10.0",
  "cbor2",
  "spidev; platform_system=='Linux'",
  "smbus2; platform_system=='Linux'",
  "RPi.GPIO; platform_system=='Linux'"
]

[project.scripts]
metrosign = "code.main:main"
